Checkout to master, change reset.png to one_does_not_simply.jpg in reset.html and commit the changes;

--- a/reset.html
+++ b/reset.html
@@ -74,7 +74,7 @@ body {
   <a href="index.html" class="right">Main page</a>
 </div>
 
-<img src="images/reset.png" alt="Git reset" class="center">
+<img src="images/one_does_not_simply.jpg" alt="Git reset" class="center">
 
 </body>
 </html>
